# scrape-as-a-service

./: Makefile  README.md  docker-compose.yml
app/server/: README.md  pyproject.toml
app/server/proto_gen/: scrape_task_pb2.py
app/server/server/: config.py  main.py
app/server/server/clients/: kafka_client.py  minio_client.py
app/server/server/utils/: config.py  constants.py  kafka_client.py  minio_client.py  redis_client.py
app/server/tests/: test_kafka_client.py  test_redis_client.py
app/worker-js/: package-lock.json  package.json
app/worker-js/proto_gen/: scrape_task.d.ts  scrape_task.js
app/worker-js/src/: config.js
app/worker-py/: README.md  pyproject.toml
app/worker-py/proto_gen/: scrape_task_pb2.py
app/worker-py/worker-py/: main.py
app/worker-py/worker_py/: cli.py  config.py  main.py  worker.py
app/worker-py/worker_py/clients/: kafka_client.py  redis_client.py
app/worker-py/worker_py/scrape/: base_scraper.py
app/worker-py/worker_py/scrapers/: api_scraper.py  base_scraper.py  html_scraper.py  webdriver_scraper.py
app/worker-py/worker_py/utils/: config.py  constants.py  kafka_client.py  minio_client.py  redis_client.py
config/: kafka.json  kafka_topics.json  minio.json  redis.json
proto/: scrape_task.proto
scripts/: compile_protos.ps1  compile_protos.sh
server/: README.md  blah.py  pyproject.toml
server/server/utils/: __init__.py
server/tests/: test_kafka_client.py
worker/: pyproject.toml
