[tool.poetry]
name = "worker-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "worker-py" }
]

[tool.poetry.dependencies]
python = ">=3.12"
protobuf = "^6.30.2"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.71.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
